# LLM-routing-for-agentic-NL2SQL

./: .env_example  .gitignore  LICENSE  README copy.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
configs/: llm_model_config.json  llm_model_descriptions.json
data/: arena_hard_results.csv
data/database_data/: metadata.py  supplementary.py
experiments/: README.md  experiment_dataset_gen.py  experiment_dataset_gen_arena.py  experiment_flow.ipynb  matrix_router_agent_eval.py  model_analysis_plots.py  rag_router_agent_eval.py  supervisor_agent_eval.py  validation_per_router_results.py
experiments/common/: evaluation.py  plot_utils.py  retry_utils.py
experiments/test_sets/: build_qa_json.py  comprehensive_qa.json  instruct_advanced_postgres.csv
hooks/: pre-commit
mcp/: matrix_router_server.py  rag_router_server.py  server.py  supervisor_server.py  tool_converter.py
src/: schema.py
src/agents/: dummy_agent.py  sql_agent.py  sql_agent_matrix_router.py  sql_agent_rag_router.py  supervisor_agent.py  system_state_modifier.py
src/cost_calc/: cost_tracker.py  shared_store.py  store_cost_tracker.py
src/models/: base.py  huggingface_model.py  litellm_model.py  ollama_models.py  openai_model.py  vertex_ai_anthropic_model.py  vertex_ai_deployment_model.py  vertex_ai_gemini_model.py  vertex_ai_meta.py  vertex_ai_mistral.py
src/prompts/: __init__.py  postgres_prompts.py  prompt_utils.py  supervisor_prompt.py
src/retrievers/: InMemoryVectorStore.py  __init__.py  base.py  cached_retriever.py
src/routers/: matrix_router.py  rag_router.py
src/tools/: dummy_agent_tools.py  (+2 more)
tests/: test_arena_decision_matrix_verification.py  test_judge_model_verification.py  test_new_model_system.py  test_rag_query_robustness.py  test_rag_retrieval_verification.py  test_react_agent_prompt_variations.py  test_react_agent_temperature_variability.py  test_react_agent_verification.py
(+31 files in other folders)
